force-app/main/default/objects/tc9_pr__Calendar__c/tc9_pr__Calendar__c.object-meta.xml
<CustomObject>
    <label>Calendar</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>