force-app/main/default/objects/tc9_pr__Calendar__c/fields/tc9_3bint__Day_of_Week__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Day_of_Week__c</fullName>
    <formula>case(tc9_et__Weekly_Start_Day__c,
&quot;Monday&quot;, 0,
&quot;Tuesday&quot;, 1,
&quot;Wednesday&quot;, 2,
&quot;Thursday&quot;, 3,
&quot;Friday&quot;, 4,
&quot;Saturday&quot;, 5,
&quot;Sunday&quot;, 6,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>