force-app/main/default/objects/tc9_pr__Calendar__c/fields/tc9_3bint__FirstPeriodDate__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__FirstPeriodDate__c</fullName>
    <label>FirstPeriodDate</label>
    <type>Date</type>
</CustomField>