force-app/main/default/objects/tc9_pr__Calendar__c/fields/tc9_et__Break_Entry_Format__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Break_Entry_Format__c</fullName>
    <description>The format that breaks on a timesheets will be entered</description>
    <inlineHelpText>The format that breaks on a timesheets will be entered</inlineHelpText>
    <label>Break Entry Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Break_Entry_Format_Picklists</valueSetName>
    </valueSet>
</CustomField>