force-app/main/default/objects/tc9_pr__Calendar__c/fields/tc9_et__Enable_Paid_Breaks__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Enable_Paid_Breaks__c</fullName>
    <description>When set to &apos;Yes&apos; the timesheet associated with this timesheet calendar will allow Breaks to be selected as Paid.</description>
    <inlineHelpText>When set to &apos;Yes&apos; the timesheet associated with this timesheet calendar will allow Breaks to be selected as Paid.</inlineHelpText>
    <label>Enable Paid Breaks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>