force-app/main/default/objects/tc9_pr__Calendar__c/fields/tc9_et__Fortnightly_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Fortnightly_Start_Date__c</fullName>
    <description>When Timesheet Frequency equals “Fortnightly”, the start date of the first full fortnightly timesheet under the Timesheet Calendar.</description>
    <inlineHelpText>When Timesheet Frequency equals “Fortnightly”, the start date of the first full fortnightly timesheet under the Timesheet Calendar.</inlineHelpText>
    <label>Fortnightly Start Date</label>
    <type>Date</type>
</CustomField>