force-app/main/default/objects/tc9_pr__Calendar__c/fields/tc9_et__Generate_Invoice_Calendar_Periods__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Generate_Invoice_Calendar_Periods__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies Invoice Calendar records being created outside of the standard page.</description>
    <inlineHelpText>Identifies Invoice Calendar records being created outside of the standard page.</inlineHelpText>
    <label>Generate Invoice Calendar Periods</label>
    <type>Checkbox</type>
</CustomField>