force-app/main/default/objects/tc9_pr__Calendar__c/fields/tc9_et__Invoice_Entity__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Entity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines the Invoice Entity that applies to the Calendar</description>
    <inlineHelpText>Defines the Invoice Entity that applies to the Calendar</inlineHelpText>
    <label>Invoice Entity</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Invoice Entity defined on the Calendar does not have a Record Type of Invoice Entity. Please review.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Invoice Entity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Calendars with Account as Invoice Entity</relationshipLabel>
    <relationshipName>Calendars</relationshipName>
    <type>Lookup</type>
</CustomField>