force-app/main/default/objects/tc9_pr__Calendar__c/fields/tc9_et__Invoice_Schedule__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Schedule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines the Invoice Schedule that applies to the Calendar</description>
    <inlineHelpText>Defines the Invoice Schedule that applies to the Calendar</inlineHelpText>
    <label>Invoice Schedule</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Invoice Schedule defined on the Calendar does not have a Record Type of Invoice Schedule. Please review.</errorMessage>
        <filterItems>
            <field>tc9_pr__Schedule__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Invoice Schedule</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Schedule__c</referenceTo>
    <relationshipLabel>Calendars with Invoice Schedule</relationshipLabel>
    <relationshipName>Calendars</relationshipName>
    <type>Lookup</type>
</CustomField>