force-app/main/default/objects/tc9_pr__Calendar__c/fields/tc9_et__Monthly_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Monthly_Start_Date__c</fullName>
    <description>If populated denotes the date a monthly timesheet period will start on when Timesheet Frequency equals &quot;Monthly&quot;. If blank the 1st of the Month will be applied.</description>
    <inlineHelpText>If populated denotes the date a monthly timesheet period will start on when Timesheet Frequency equals &quot;Monthly&quot;. If blank the 1st of the Month will be applied.</inlineHelpText>
    <label>Monthly Start Date</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>