force-app/main/default/objects/tc9_pr__Calendar__c/fields/tc9_et__No_Days_Future_Timesheets_Visible__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__No_Days_Future_Timesheets_Visible__c</fullName>
    <description>Used to determine how many future days timesheets are visible in the Employee Community. For example a value of 10 will mean timesheets with a start date of 10 days greater than today will be available in the community.  If left blank or 0 the start date will default to today so that only the current time period is visible.</description>
    <inlineHelpText>Used to determine how many future days timesheets are visible in the Employee Community. For example a value of 10 will mean timesheets with a start date of 10 days greater than today will be available in the community.  If left blank or 0 the start date will default to today so that only the current time period is visible.</inlineHelpText>
    <label>No. Days Future Timesheets Visible</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>