force-app/main/default/objects/tc9_pr__Calendar__c/fields/tc9_et__No_Days_Invoice_Date_after_End_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__No_Days_Invoice_Date_after_End_Date__c</fullName>
    <description>Defines the number of days after the calendar period end date that the Invoices will be created</description>
    <inlineHelpText>Defines the number of days after the calendar period end date that the Invoices will be created</inlineHelpText>
    <label>No. Days Invoice Date after End Date</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>