force-app/main/default/objects/tc9_pr__Calendar__c/fields/tc9_et__Split_Timesheets_Over_Months__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Split_Timesheets_Over_Months__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if a Timesheet will be split into multiple Timesheets if the Timesheet falls over a months end.</description>
    <inlineHelpText>Defines if a Timesheet will be split into multiple Timesheets if the Timesheet falls over a months end.</inlineHelpText>
    <label>Split Timesheets Over Months</label>
    <type>Checkbox</type>
</CustomField>