force-app/main/default/objects/tc9_pr__Calendar__c/fields/tc9_et__Sunday__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Sunday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the timesheet will include timesheet entries for Sundays on creation. When False, they will not be included and must be added manually to the timesheet if needed.</description>
    <inlineHelpText>Indicates if the timesheet will include timesheet entries for Sundays on creation. When False, they will not be included and must be added manually to the timesheet if needed.</inlineHelpText>
    <label>Sunday</label>
    <type>Checkbox</type>
</CustomField>