force-app/main/default/objects/tc9_pr__Calendar__c/fields/tc9_et__Timesheet_Frequency__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Timesheet_Frequency__c</fullName>
    <description>The frequency according to which the timesheets will be generated</description>
    <inlineHelpText>The frequency according to which the timesheets will be generated</inlineHelpText>
    <label>Timesheet Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Timesheet_Frequency_Picklist</valueSetName>
    </valueSet>
</CustomField>