force-app/main/default/objects/tc9_pr__Calendar__c/fields/tc9_et__Tuesday__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Tuesday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the timesheet will include timesheet entries for Tuesdays on creation. When False, they will not be included and must be added manually to the timesheet if needed.</description>
    <inlineHelpText>Indicates if the timesheet will include timesheet entries for Tuesdays on creation. When False, they will not be included and must be added manually to the timesheet if needed.</inlineHelpText>
    <label>Tuesday</label>
    <type>Checkbox</type>
</CustomField>