force-app/main/default/objects/tc9_pr__Calendar__c/fields/tc9_et__Weekly_Start_Day__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Weekly_Start_Day__c</fullName>
    <description>When Timesheet Frequency equals “Weekly”, the day of the week the timesheet will start with</description>
    <inlineHelpText>When Timesheet Frequency equals “Weekly”, the day of the week the timesheet will start with</inlineHelpText>
    <label>Weekly Start Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Days_Picklists</valueSetName>
    </valueSet>
</CustomField>