force-app/main/default/objects/tc9_pr__Calendar__c/fields/tc9_et__X4_Week_Frequency_Applies__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__X4_Week_Frequency_Applies__c</fullName>
    <description>Defines if the calendar applied to the Assignment uses 4 week frequency calculations</description>
    <inlineHelpText>Defines if the calendar applied to the Assignment uses 4 week frequency calculations</inlineHelpText>
    <label>4 Week Frequency Applies</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>