force-app/main/default/objects/tc9_pr__Calendar__c/fields/tc9_pr__Automated_Pay_Batch_Earlier_Periods__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Automated_Pay_Batch_Earlier_Periods__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether Pay Batches created by scheduled automation will consider earlier Pay Calendar Periods or not.</description>
    <inlineHelpText>Indicates whether Pay Batches created by scheduled automation will consider earlier Pay Calendar Periods or not.</inlineHelpText>
    <label>Automated Pay Batch Earlier Periods?</label>
    <type>Checkbox</type>
</CustomField>