force-app/main/default/objects/tc9_pr__Calendar__c/fields/tc9_pr__Automated_Pay_Batch_Processing__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Automated_Pay_Batch_Processing__c</fullName>
    <description>Pay Batch automation setting to be used for the creation of large pay batches.</description>
    <inlineHelpText>Pay Batch automation setting to be used for the creation of large pay batches.</inlineHelpText>
    <label>Automated Pay Batch Processing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create Only</fullName>
            </value>
            <value>
                <fullName>Create and Calculate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>