force-app/main/default/objects/tc9_pr__Calendar__c/fields/tc9_pr__Default_Payee_Aggregate_Dates__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Default_Payee_Aggregate_Dates__c</fullName>
    <description>The country selected in this field will control the population of Month, Quarter and Year end dates during Calendar Period creation</description>
    <inlineHelpText>The country selected in this field will control the population of Month, Quarter and Year end dates during Calendar Period creation</inlineHelpText>
    <label>Default Payee Aggregate Dates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Supported_Functional_Countries</valueSetName>
    </valueSet>
</CustomField>