force-app/main/default/objects/tc9_pr__Calendar__c/fields/tc9_pr__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Effective_Date__c</fullName>
    <description>The first date in the validity range of this calendar</description>
    <formula>tc9_pr__Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The first date in the validity range of this calendar</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>