force-app/main/default/objects/tc9_pr__Calendar__c/fields/tc9_pr__End_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__End_Date__c</fullName>
    <description>The last date in the validity range of this calendar</description>
    <inlineHelpText>The last date in the validity range of this calendar</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>