force-app/main/default/objects/tc9_pr__Calendar__c/fields/tc9_pr__Generate_Calendar_Period_records__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Generate_Calendar_Period_records__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies Calendar records being created outside of the standard page.</description>
    <inlineHelpText>Identifies Calendar records being created outside of the standard page.</inlineHelpText>
    <label>Generate Calendar Period records</label>
    <type>Checkbox</type>
</CustomField>