force-app/main/default/objects/tc9_pr__Calendar__c/fields/tc9_pr__No_Days_Payment_Date_after_End_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__No_Days_Payment_Date_after_End_Date__c</fullName>
    <description>The number of days after end calendar period end date from which the bank file will be processed</description>
    <inlineHelpText>The number of days after end calendar period end date from which the bank file will be processed</inlineHelpText>
    <label>No. Days Payment Date after End Date</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>