force-app/main/default/objects/tc9_pr__Calendar__c/fields/tc9_pr__No_Days_Payroll_Date_after_End_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__No_Days_Payroll_Date_after_End_Date__c</fullName>
    <description>Defines the number of days after the calendar period end date that the Pay Batch will be calculated</description>
    <inlineHelpText>Defines the number of days after the calendar period end date that the Pay Batch will be calculated</inlineHelpText>
    <label>No. Days Payroll Date after End Date</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>