force-app/main/default/objects/tc9_pr__Calendar__c/fields/tc9_pr__Pay_Schedule_Period_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Schedule_Period_Type__c</fullName>
    <description>Frequency of payment to payees</description>
    <formula>TEXT(tc9_pr__Schedule__r.tc9_pr__Period_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Frequency of payment to payees</inlineHelpText>
    <label>Pay Schedule Period Type</label>
    <type>Text</type>
</CustomField>