force-app/main/default/objects/tc9_pr__Calendar__c/fields/tc9_pr__Payment_Entity__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payment_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related payment entity</description>
    <inlineHelpText>The related payment entity</inlineHelpText>
    <label>Payment Entity</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Payment Entity defined on the Calendar must have a record type of Payment Entity</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Payment_Entity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Calendars</relationshipLabel>
    <relationshipName>Calendars</relationshipName>
    <type>Lookup</type>
</CustomField>