force-app/main/default/objects/tc9_pr__Calendar__c/fields/tc9_pr__Schedule__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Pay Schedule that applies to the Calendar</description>
    <inlineHelpText>Defines the Pay Schedule that applies to the Calendar</inlineHelpText>
    <label>Pay Schedule</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Pay Schedule defined on the Calendar must have a record type of Pay Schedule</errorMessage>
        <filterItems>
            <field>tc9_pr__Schedule__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Pay Schedule</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Schedule__c</referenceTo>
    <relationshipLabel>Calendars</relationshipLabel>
    <relationshipName>Calendars</relationshipName>
    <type>Lookup</type>
</CustomField>