force-app/main/default/objects/tc9_pr__Calendar__c/fields/tc9_pr__Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Status__c</fullName>
    <description>The current status of this record based on the effective date and expiry date</description>
    <inlineHelpText>The current status of this record based on the effective date and expiry date</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Active_Status_Picklists</valueSetName>
    </valueSet>
</CustomField>