force-app/main/default/objects/tc9_pr__Calendar__c/recordTypes/tc9_et__Invoice.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Invoice</fullName>
    <active>true</active>
    <description>To be used for Calendars relating to Invoicing</description>
    <label>Invoice</label>
</RecordType>