force-app/main/default/objects/tc9_pr__Calendar__c/recordTypes/tc9_et__Public_Holiday.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Public_Holiday</fullName>
    <active>true</active>
    <description>To be used for Calendars relating to Public Holidays</description>
    <label>Public Holiday</label>
</RecordType>