force-app/main/default/objects/tc9_pr__Calendar__c/recordTypes/tc9_et__Timesheet.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Timesheet</fullName>
    <active>true</active>
    <description>To be used for Calendars relating to Timesheets</description>
    <label>Timesheet</label>
</RecordType>