force-app/main/default/objects/tc9_pr__Calendar__c/recordTypes/tc9_pr__Payroll.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Payroll</fullName>
    <active>true</active>
    <label>Payroll</label>
</RecordType>